# bluedit

./: .gitignore  README.md  com.mattjakeman.bluedit.json  com.mattjakeman.bluedit.json~  meson.build
.flatpak-builder/cache/refs/heads/x86_64-com.mattjakeman.bluedit.json/: build-bluedit  build-cmark  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-com.mattjakeman.bluedit.json
.flatpak-builder/git/https_github.com_commonmark_cmark.git/: FETCH_HEAD  config
.flatpak-builder/git/https_github.com_commonmark_cmark.git-LZZL9Z/: config
build-aux/meson/: postinstall.py
data/: com.mattjakeman.bluedit.appdata.xml.in  com.mattjakeman.bluedit.gschema.xml  meson.build
flatpak-build/: metadata.debuginfo
flatpak-build/files/: manifest.json
flatpak-build/files/lib/: libcmark.so.0.29.0
flatpak-build/files/lib/cmake/: cmark-release.cmake
flatpak-build/files/share/appdata/: com.mattjakeman.bluedit.appdata.xml
po/: POTFILES  meson.build
repo/: summary
src/: bl-document.c  bl-document.h  bl-markdown-view.c  bl-markdown-view.h  bl-multi-editor.c  bl-preferences.c  bl-preferences.h  bl-toolbar.c  bl-toolbar.h  bl-workspace.c  bluedit-window.c  bluedit-window.c.orig  bluedit-window_LOCAL_15330.c  helper.h  main.c  meson.build
src/res/: bluedit-toolbar.ui  bluedit-window.ui  bluedit-window.ui~  bluedit.gresource.xml  preferences.ui  preferences.ui~  style.css
src/views/: bl-editor.c  bl-editor.h  bl-view.h
subprojects/libsplit/: meson.build  spl-tile-manager.c  spl-tile-manager.h
subprojects/libsplit/include/: spl.h
(+13 files in other folders)
